fixed cursor issue if form file content is too large

--- a/src/less/addons/form-file.less
+++ b/src/less/addons/form-file.less
@@ -35,7 +35,7 @@
     /* 1 */
     left: 0;
     /* 2 */
-    font-size: 50px;
+    font-size: 500px;
 }
 
 
